added curd for board added custom exceptions